--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = ""
 authors = [
     {name = "hahahellooo", email = "hahahello777@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "kafka-python>=2.0.2",
+]
 requires-python = "==3.8.*"
 readme = "README.md"
 license = {text = "MIT"}
